--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -9,7 +9,7 @@ We use calculus to gain insight into the quadratic formula.
 \end{abstract}
 \maketitle
 
- Here we offer several interpretations of the quadratic formula from the perspectives of differential and integral calculus.
+ We offer several interpretations of the quadratic formula from the perspectives of differential and integral calculus.
 
 \section*{Subnormals and the Quadratic Formula}
 Our first approach came about in checking that the quadratic formula is dimensionally correct and reveals a property of parabolas hidden in the formula itself.
@@ -54,20 +54,25 @@ describes how to locate the $x$-intercepts of the parabola
 \begin{equation}
  y=ax^2+bx+c.   \label{Eq:Parabola}
  \end{equation}
- The coordinates $x,y$ and the constant term $c$ have dimensions of length. The coefficient $b$ is dimensionless and gives the slope of the tangent line at the $y$-intercept $Q(0,c)$. Since the product $ax^2$ is a length, so is the reciprocal $a^{-1}$ of the leading coefficient. This reciprocal has several interpretations, each describing the parabola's size. One is related to the parabola's radius of curvature $(2a)^{-1}$ at the vertex and another to the focal length, $(4a)^{-1}$. 
+ The coordinates $x,y$ and the constant term $c$ have dimensions of length. The coefficient $b$ is dimensionless and gives the slope of the tangent line at the $y$-intercept $Q(0,c)$. Since the product $ax^2$ is a length, so is the reciprocal $a^{-1}$ of the leading coefficient. This reciprocal has several interpretations, each describing the parabola's size. One is related to the parabola's radius of curvature $(2a)^{-1}$ at the vertex and another to its focal length, $(4a)^{-1}$. 
 
-But a third interpretation, our focus here, is encoded in the quadratic formula. It also plays a key role in the solution to the following problem.
+But a third interpretation, our focus here, is encoded in the formula and plays a key role in the solution to the following problem.
 
 \begin{exercise}
 Let $P$ be a point on the parabola $y=ax^2$ different from the origin $O$. Let $Q$ be the point where the normal lines to the parabola at $P$ and $O$ intersect. Find the limiting position of $Q$ as $P\to O$.
 
+\begin{exploration}
+First guess what happens to $Q$ as $P$ approaches $O$. Then drag the slider $b$ in Line 2 to zero to see if you were correct.
 \begin{onlineOnly}
     \begin{center}
-\desmos{dkbavb5xzf}{450}{600} 
+\desmos{2xaqqvvv7p}{450}{600} 
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/dkbavb5xzf}{151: Normals to Parabola 2}
+\href{https://www.desmos.com/calculator/2xaqqvvv7p}{151: Normals to Parabola 2}
+\end{exploration}
+
+
 
 \end{exercise}
 
