--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -73,13 +73,13 @@ First guess what happens to $Q$ as $P$ approaches $O$. Then drag the slider $b$ 
 \end{exploration}
 
 \begin{explanation}
-I like this problem because the result is not intuitive. The most common guess $Q$ is that goes off to infinity, probably because the normal lines at $P$ and $O$ tend toward being parallel. This si in fact be correct for any curve $y=a|x|^p$ where $p>2$, but not for the parabola $y=ax^2$.
+I like this problem because the result is surprising. Many people guess $Q$ is that goes off to infinity, probably because the normal lines at $P$ and $O$ tend toward being parallel. This is in fact be correct for any curve $y=a|x|^p$ with $p>2$, but not for the parabola $y=ax^2$.
 
-Because the normal line at $P(b,ab^2)$ has slope
+For the paraobola, because the normal line at $P(b,ab^2)$ has slope
 \[
         m_\perp = -\frac{1}{2ab} ,
 \] 
-the change in the $y$-coordinate in moving from $P$ to $Q$ is the \emph{constant}
+the change in the $y$-coordinate in moving from $P$ to $Q$ is %the \emph{constant}
 \[
  \Delta y =  m_\perp (\Delta x) =  \left( -\frac{1}{2ab}\right)(-b)  = \frac{1}{2a} .
 \]
@@ -90,9 +90,13 @@ So $Q$ has $y$-coordinate
 \]
 and as $P$ approaches the origin, $Q$ approaches the point with coordinates $(0,1/(2a))$.
 \end{explanation}
-
-
 \end{exercise}
+
+The other surprising part about the above solution is that in moving along the normal line from a point on any parabola to the axis of symmetry, the $y$-coordinate changes by the \emph{constant}
+\[
+   \Delta y = \frac{1}{2a} .
+\]
+This fact, what I'll call the \emph{constant subnormal property of parabolas} (see note below) is actually encoded in the quadratic formula. 
 
 Just the first part 
 \[
