--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -115,7 +115,7 @@ But because $\Delta y$ is independent of $b$, (\ref{Eq:Subnormal}) also records 
 
 For the same reason, the constant subnormal property is encoded again in the second term of the quadratic formula because the tangents to the parabola at its $x$-intercepts have slopes $\pm \sqrt{b^2-4ac}$. So the $x$-intercepts of the parabola (\ref{Eq:Parabola}), if distinct, are the points where the non-vertical normal lines from the point $(-b/(2a), 1/(2a))$ intersect the parabola.
 
-\emph{Note:} In Leibniz's terminology, the \emph{subnormal} at a point $P$ of a curve is the segment $ON$ in the figure below, where $PN$ is normal to the curve and $PO$ is normal to the $x$-axis $CA$. 
+\emph{Note:} In Leibniz's terminology, segment $PN$ is the \emph{normal} and segment $ON$ the \emph{subnormal} at a point $P$ of the curve $y=f(x)$ in the figure below ($PN$ and $PO$ are respectively normal to the curve and the $x$-axis.) 
 
 \begin{onlineOnly}
     \begin{center}
