--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -19,5 +19,6 @@ started with Ximera for course instructors.
 \activity{PowerSeries/PowerSeries}
 \activity{InscribedSpheres/InscribedSpheres}
 \activity{FoldedPaper/FoldedPaper}
- 
+\activity{BishopFrames/BishopFrames} 
+
 \end{document}
