--- a/BishopFrames/BishopFrames.tex
+++ b/BishopFrames/BishopFrames.tex
@@ -9,5 +9,31 @@ This note is based on the paper \emph{There is more than one way to frame a curv
 \end{abstract}
 \maketitle
 
+The key idea of the paper is captured in the first two sentences of Section 1:
+
+\pskip
+
+\emph{Relatively parallel fields.} We say that a normal vector field $M$ along a curve is \emph{relatively parallel} if its derivative is tangential. Such a field turns only whatever amount is necessary for it to remain normal, so it is as close to being parallel without losing normality.
+
+\pskip
+
+For me it helps to have a physical model or to at least imagine one. Start by bending a wire into a space curve. Then cut out a small cardboard disk and punch a hole is its center. Now \emph{slide} the disk along the wire, keeping the disk perpendicular to the curve at all times \emph{without} turning the disk about the wire.
+
+It's the without ``turning part'' that's crucial. This is equivalent to requiring each point of the disk to move in the direction of the wire (ie. normal to the disk) at all times. Since there are infinitely many ways to slide the wire normally along the wire with rotation and only one way without, it might help to start with an example of the first.
+
+
+\begin{exploration}
+\href{https://www.desmos.com/3d/o8a89toejw}{163: Tube around cylindrical helix 4}
+\end{exploration}
+
+
+\begin{exploration}
+\href{https://www.desmos.com/3d/fg6l58x6tl}{163: Tube around cylindrical helix 3}
+\end{exploration}
+
+\begin{exploration}
+\href{https://www.desmos.com/3d/agzievbron}{163: Tube around cylindrical helix 2}
+\end{exploration}
+
 
 \end{document}
