--- a/BishopFrames/BishopFrames.tex
+++ b/BishopFrames/BishopFrames.tex
@@ -81,4 +81,22 @@ have postivie torsion.
 Explain with a picture why a right-handed cylindrical helix has positive torsion.
 \end{exercise}
 
+\begin{exercise}   \label{QQ:Podsfgttga}
+(a) Use the first two Frenet equations to find the third,
+\[
+     \overrightarrow{N}^\prime = \answer{-\kappa} \overrightarrow{T} + \answer{\tau} \overrightarrow{B} .
+\]
+\begin{hint}
+Differentiate each of the equations
+\[
+ \overrightarrow{N}\cdot \overrightarrow{B} = \overrightarrow{N}\cdot\overrightarrow{T} = 0
+\]
+with respect to arclength.
+
+(b) Explain the third Frenet equation geometrically.
+\end{hint}
+  
+\end{exercise}
+
+
 \end{document}
