--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -20,5 +20,6 @@ started with Ximera for course instructors.
 \activity{InscribedSpheres/InscribedSpheres}
 \activity{FoldedPaper/FoldedPaper}
 \activity{BishopFrames/BishopFrames} 
+\activity{ClockHands/ClockHands} 
 
 \end{document}
