--- a/ClockHands/ClockHands.tex
+++ b/ClockHands/ClockHands.tex
@@ -9,7 +9,20 @@ A twist on a familiar problem.
 \end{abstract}
 \maketitle
 
-We're all familiar with the problem about finding the rate at which the distance between the tips of the minute and hour hands of a clock is changing at a certain time. But a more interesting question is to ask when this distance is increasing at the fastest rate. 
+\section*{Introduction}
+We're all familiar with the problem about finding the rate at which the distance between the tips of the minute and hour hands of a clock is changing at a certain time. But a more interesting question, for both Math 151 and 163, is to ask when this distance is increasing at the fastest rate. 
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{qvk0mzy26u}{450}{600} 
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/qvk0mzy26u}{151: Hands of a Clock}
+
+
+\section*{A Computational Solution}
 
 
 \end{document}
