--- a/ClockHands/ClockHands.tex
+++ b/ClockHands/ClockHands.tex
@@ -13,6 +13,9 @@ A twist on a familiar problem.
 We're all familiar with the problem about finding the rate at which the distance between the tips of the minute and hour hands of a clock is changing at a certain time. But a more interesting question, for both Math 151 and 163, is to ask when this distance is increasing at the fastest rate. 
 
 
+\begin{exploration}
+Experiment with the animation below, perhaps changing the lengths of the hands. Any conjectures?
+
 \begin{onlineOnly}
     \begin{center}
 \desmos{qvk0mzy26u}{450}{600} 
@@ -22,7 +25,15 @@ We're all familiar with the problem about finding the rate at which the distance
 \href{https://www.desmos.com/calculator/qvk0mzy26u}{151: Hands of a Clock}
 
 
-\section*{A Computational Solution}
+\end{exploration}
 
+\section*{A Computational Solution}
+%It simplifies things if we ignore time and work in the reference frame of one of the hands
+
+We'll let $a$ and $b$ denote the respective lengths of the hour and minute hands, $\theta$ the angle (in radians) between the hands, and $c$ the distance between their tips. Then by the law of cosines,
+\[
+        \frac{dc}{dt} = \frac{ab\cos \theta}{c} = \frac{ab cos\theta}{\sqrt{a^2+b^2-2ab\cos\theta}} ,
+\]
+where $t$ is the time, say measured in hours.
 
 \end{document}
