--- a/ClockHands/ClockHands.tex
+++ b/ClockHands/ClockHands.tex
@@ -20,11 +20,11 @@ A problem in Stewart asks to find the rate at which the distance between the tip
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{zz3qff7ocv}{450}{600}  %qvk0mzy26u
+\desmos{qr4d0ayurs}{450}{600}  %qvk0mzy26u
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/zz3qff7ocv}{151: Hands of a Clock}
+\href{https://www.desmos.com/calculator/qr4d0ayurs}{151: Hands of a Clock}
 
 
 \end{exploration}
@@ -63,5 +63,7 @@ in the distance geometrically. To do this, note that since $ab\sin\theta = 2K$ i
 \[
       \frac{dc}{d\theta} = \frac{2K}{c}  = h,
 \]
-where $h$ is the distance from from $C$ to $\overrightarrow{AB}$.
+where $h$ is the altitude from from $C$ to $\overrightarrow{AB}$ in $\Delta ABC$ above. Since 
+
+
 \end{document}
